testsuite/poke.pkl/mod-f32-diag-2.pk
/* { dg-do compile } */

var res
  = 1 .% 11L; /* { dg-error "invalid operand .*" } */
